# cpp-algorithms

./: .gitignore  CMakeLists.txt  README.md
1-foundations/getting-started-sorting-algorithms/: bubble_sort.cpp  ejercicios_1.cpp  insertion_sort.cpp  inversions.cpp  merge_sort.cpp  notas.md  selection_sort.cpp
Google_tests/: CMakeLists.txt
cap_1/: insertion_sort.cpp
cap_2/: bubble_sort.cpp  ejercicios_1.cpp  insertion_sort.cpp  inversions.cpp  merge_sort.cpp  notas.md  selection_sort.cpp
codewars/: README.md  better_than_average.cpp  bmi.cpp  magnet_particles_in_boxes.cpp  total_points.cpp  words_to_array.cpp
cpp/: README.md  functions.cpp  references.cpp  templates.cpp
foobar/: the-cake-is-not-a-lie.py
tests/codewars/: test_magnets.cpp
utils/: arr_ops.cpp  utils.hpp
